#1598 - URL -> URI
  1. URLUtil.toURL(String) utility method

  - Added URLUtil.toURL(String) that wraps new URI(url).toURL() and converts URISyntaxException into MalformedURLException —
  callers no longer need to handle two exception types
  - Fixed getHostSegments(String) to use toURL() and removed URISyntaxException from its signature

  2. Pre-sanitization in BasicURLNormalizer.sanitizeForURI()

  - Encodes common illegal URI characters before parsing: | → %7C, \ → %5C, space → %20, { → %7B, } → %7D
  - Converts non-standard %uXXXX percent encoding to proper UTF-8 percent encoding (e.g., %u011f → %C4%9F)
  - Applied at the start of filter() so all subsequent URI parsing succeeds